--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,3 @@
-/**
- * Copyright 2015 Google Inc. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
     overflow: hidden;
@@ -109,23 +93,6 @@ html, body {
     margin-top: calc(100% - 98%);
 }
 
-.demo-charts {
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.demo-chart:nth-child(1) {
-  color: #ACEC00;
-}
-.demo-chart:nth-child(2) {
-  color: #00BBD6;
-}
-.demo-chart:nth-child(3) {
-  color: #BA65C9;
-}
-.demo-chart:nth-child(4) {
-  color: #EF3C79;
-}
 .demo-graphs {
   padding: 16px 32px;
   display: -webkit-flex;
@@ -258,7 +225,7 @@ _:-ms-input-placeholder, :root .demo-graph {
     display: block;
 }
 
-.mdl-dialog {
+.mdl-dialog { /* luat de undeva */
   border: none;
   box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
   width: calc(100% - 65%); }
@@ -299,6 +266,7 @@ _:-ms-input-placeholder, :root .demo-graph {
 .demo-card-square > .mdl-card__title {
   color: #fff;
 }
+/* pana aici */
 
 .footer {
     color: #838383;
@@ -441,4 +409,89 @@ _:-ms-input-placeholder, :root .demo-graph {
     #secondul {
         right: calc(100% - 96%) !important;
     }
+}
+
+@media screen and (max-height: 910px) {
+    #secondul, #firstUL {
+        position: relative !important;
+    }
+}
+
+@media screen and (max-height: 910px) and (min-width: 1801px) {
+    #secondul {
+        right: calc(100% - 98%) !important;
+    }
+}
+
+
+/* Dialog Polyfill (https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill) */
+
+dialog{
+    position:absolute;
+    left:0;
+    right:0;
+    width: -moz-fit-content;
+    width:-webkit-fit-content;
+    width:fit-content;
+    height:-moz-fit-content;
+    height:-webkit-fit-content;
+    height:fit-content;
+    margin:auto;
+    border:solid;
+    padding:1em;
+    background:white;
+    color:black;
+    display:none
+}
+
+dialog[open]{
+    display:block;
+}
+
+dialog+.backdrop{
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    background:rgba(0,0,0,0.1)
+}
+
+@media screen and (max-width:540px){
+    dialog[_polyfill_modal]{
+        top:0;
+        width:auto;
+        margin:1em
+    }
+}
+
+._dialog_overlay{
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0
+}
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: 'liga';
+  -moz-osx-font-smoothing: grayscale;
 }
